--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.7.1",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
