--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,17 @@
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.8.0",
+    "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.14.0",
+    "react-router-dom": "^6.14.0",
     "recharts": "^2.7.1",
+    "sort-by": "^1.2.0",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
