--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/SandeepUrankar/daily-sleep-tracker#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
